chore: update getAuthorities function